# Renter

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  utility_for_chat.py  yad_scrapper.py
alembic/: env.py
alembic/versions/: 15cfa1a8cdc3_initial_schema.py
app/: config.py  db.py  models.py  schemas.py  yad_scrapper.py
app/api/: __init__.py  routes.py
app/services/: monitor.py  telegram.py
extension/: background.js  content.js  manifest.json  options.html  options.js  popup.html  popup.js  styles.css
src/: config.py  main.py
src/models/: database.py
